--- a/rms_calculator.html
+++ b/rms_calculator.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8">
   <meta name="Keywords" content="RMS, average, median, value, calculator">
   <meta name="Description" content="JavaScript average and RMS value Calculator">
-  <meta name="Version" content="12/03/2018 - SHA:4540A0">
+  <meta name="Version" content="12/03/2018 - SHA:496F78">
 
   <!-- Styles -->
   <style>
@@ -116,7 +116,10 @@
 
     <!-- Init calculations -->
     function init() {
-       reset_var();
+       if  (getCookie("saved") == 'true')
+          load_var();
+       else
+          reset_var();
        calc();
     }
 
@@ -273,10 +276,12 @@
     <!-- Save variables -->
     function save_var() {
       var expiresdate = new Date(2068, 1, 02, 11, 20);
+      expiresdate = "expires=" + expiresdate.toUTCString();
       var names = ["V_max", "V_min", "D", "V1_rms", "V2_rms", "V3_rms", "V4_rms", "V5_rms",  ];
       for(var i=0; i<names.length; i++) {
-        document.cookie = names[i] + " = " + encodeURIComponent(tonum(names[i])) + "; expires=" + expiresdate.toUTCString();
+        document.cookie = names[i] + " = " + encodeURIComponent(tonum(names[i])) + "; " + expiresdate;
       }
+      document.cookie = "saved = true; " + expiresdate
     }
 
     <!-- Load variables -->
