--- a/magnetic.html
+++ b/magnetic.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8">
   <meta name="Keywords" content="Inductance, magnetics, coil, calculator">
   <meta name="Description" content="Javascript Inductance calculator">
-  <meta name="Version" content="12/03/2018 - SHA:DD823C">
+  <meta name="Version" content="13/03/2018 - SHA:7D1F6D">
 
   <!-- Styles -->
   <style>
@@ -15,11 +15,11 @@
       font: 16px sans-serif;
       background-color: #f0f4f4;
       margin: 0;
-      min-width: ;
+      min-width: 420px;
     }
 
     .content {
-      max-width: ; 
+      max-width: 640px; 
       margin: 0 auto;
       padding: 16px 16px 32px 16px;
       background-color: #fff;
@@ -30,7 +30,7 @@
     }
 
     .license {
-      max-width: ; 
+      max-width: 640px; 
       margin: 0 auto;   
       text-align: center;
       padding: 20px 16px 60px 16px;
@@ -122,7 +122,8 @@
   </style>
 
   <script>
-
+     
+    
     <!-- Init calculations -->
     function init() {
        if  (getCookie("saved") == 'true')
