--- a/rms_calculator.html
+++ b/rms_calculator.html
@@ -7,7 +7,8 @@
   <meta charset="UTF-8">
   <meta name="Keywords" content="RMS, average, median, value, calculator">
   <meta name="Description" content="JavaScript average and RMS value Calculator">
-  <meta name="Version" content="13/03/2018 - SHA:EAA838">
+  <meta name="Version" content="14/03/2018 - SHA:2A75F1">
+	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />
 
   <!-- Styles -->
   <style>
@@ -15,7 +16,11 @@
       font: 16px sans-serif;
       background-color: #f0f4f4;
       margin: 0;
-      min-width: 420px;
+      min-width: 320px;
+    }
+    /* Responsive design for Small screen */
+    @media screen and (max-width: 640px) {
+      body { min-width: 320px !important; }
     }
 
     .content {
@@ -58,7 +63,8 @@
     }
 
     input[type=button] {
-      font-size: 16px;
+      font: inherit;
+      text-align: center;
       background-color: #eee;
       border: 1px solid #888;
       border-radius: 4px;
@@ -124,9 +130,8 @@
   <script>
      
 
-    <!-- Include script (49 lines ): zeros.js -->
+    <!-- Include script (48 lines ): zeros.js -->
     ﻿
-
     <!-- Zero finding with secant method. https://en.wikipedia.org/wiki/Secant_method -->
     function zero_secant(x, fn) {
       var iter, x0, x1, x2, y0, y1;
