Improved responsive design

--- a/inductance_calc.html
+++ b/inductance_calc.html
@@ -7,8 +7,8 @@
   <meta charset="UTF-8">
   <meta name="Keywords" content="Inductance, magnetics, coil, calculator">
   <meta name="Description" content="Javascript Inductance calculator">
-  <meta name="Version" content="14/03/2018 - SHA:2440D4">
-	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />
+  <meta name="Version" content="14/03/2018 - SHA:9BA60E">
+  <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />
 
   <!-- Styles -->
   <style>
