--- a/rms_calculator.html
+++ b/rms_calculator.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8">
   <meta name="Keywords" content="RMS, average, median, value, calculator">
   <meta name="Description" content="JavaScript average and RMS value Calculator">
-  <meta name="Version" content="14/03/2018 - SHA:6D1CF1">
+  <meta name="Version" content="14/03/2018 - SHA:2B276E">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />
 
   <!-- Styles -->
@@ -90,6 +90,8 @@
       border: 1px solid #888;
       border-radius: 4px;
     }
+    input[type=text]:disabled { color: black; }
+    
     .sval {
       display: inline-block;
       width: 5em;
@@ -869,7 +871,7 @@ RU5ErkJggg==
     <!--  Row  -->
     <div class="row">
       <div class="sname">V_offset</div>
-      <div class="scalc"> <form> <input type="text" id="V_offset1"> </form> </div>
+      <div class="scalc"> <form> <input disabled="disabled" type="text" id="V_offset1"> </form> </div>
       <div class="sunit">V</div>
       <div class="scoment">Average value of sine wave (offset)</div>
     </div>
@@ -877,7 +879,7 @@ RU5ErkJggg==
     <!--  Row  -->
     <div class="row">
       <div class="sname">V_sin_ac_rms</div>
-      <div class="scalc"> <form> <input type="text" id="V_sin_ac_rms"> </form> </div>
+      <div class="scalc"> <form> <input disabled="disabled" type="text" id="V_sin_ac_rms"> </form> </div>
       <div class="sunit">V</div>
       <div class="scoment">RMS value of sine wave (without offset)</div>
     </div>
@@ -885,7 +887,7 @@ RU5ErkJggg==
     <!--  Row  -->
     <div class="row">
       <div class="sname">V_sin_rms</div>
-      <div class="scalc"> <form> <input type="text" id="V_sin_rms"> </form> </div>
+      <div class="scalc"> <form> <input disabled="disabled" type="text" id="V_sin_rms"> </form> </div>
       <div class="sunit">V</div>
       <div class="scoment">RMS value of sine wave (with offset)</div>
     </div>
@@ -896,7 +898,7 @@ RU5ErkJggg==
     <!--  Row  -->
     <div class="row">
       <div class="sname">V_offset</div>
-      <div class="scalc"> <form> <input type="text" id="V_offset2"> </form> </div>
+      <div class="scalc"> <form> <input disabled="disabled" type="text" id="V_offset2"> </form> </div>
       <div class="sunit">V</div>
       <div class="scoment">Average value of Triangle wave (offset)</div>
     </div>
@@ -904,7 +906,7 @@ RU5ErkJggg==
     <!--  Row  -->
     <div class="row">
       <div class="sname">V_tri_ac_rms</div>
-      <div class="scalc"> <form> <input type="text" id="V_tri_ac_rms"> </form> </div>
+      <div class="scalc"> <form> <input disabled="disabled" type="text" id="V_tri_ac_rms"> </form> </div>
       <div class="sunit">V</div>
       <div class="scoment">RMS value of Triangle wave (without offset)</div>
     </div>
@@ -912,7 +914,7 @@ RU5ErkJggg==
     <!--  Row  -->
     <div class="row">
       <div class="sname">V_tri_rms</div>
-      <div class="scalc"> <form> <input type="text" id="V_tri_rms"> </form> </div>
+      <div class="scalc"> <form> <input disabled="disabled" type="text" id="V_tri_rms"> </form> </div>
       <div class="sunit">V</div>
       <div class="scoment">RMS value of Triangle wave (with offset)</div>
     </div>
@@ -923,7 +925,7 @@ RU5ErkJggg==
     <!--  Row  -->
     <div class="row">
       <div class="sname">V_offset</div>
-      <div class="scalc"> <form> <input type="text" id="V_offset3"> </form> </div>
+      <div class="scalc"> <form> <input disabled="disabled" type="text" id="V_offset3"> </form> </div>
       <div class="sunit">V</div>
       <div class="scoment">Average value of Rectified Sine wave (offset)</div>
     </div>
@@ -931,7 +933,7 @@ RU5ErkJggg==
     <!--  Row  -->
     <div class="row">
       <div class="sname">V_rsin_ac_rms</div>
-      <div class="scalc"> <form> <input type="text" id="V_rsin_ac_rms"> </form> </div>
+      <div class="scalc"> <form> <input disabled="disabled" type="text" id="V_rsin_ac_rms"> </form> </div>
       <div class="sunit">V</div>
       <div class="scoment">RMS value of of Rectified Sine wave (without offset)</div>
     </div>
@@ -939,7 +941,7 @@ RU5ErkJggg==
     <!--  Row  -->
     <div class="row">
       <div class="sname">V_rsin_rms</div>
-      <div class="scalc"> <form> <input type="text" id="V_rsin_rms"> </form> </div>
+      <div class="scalc"> <form> <input disabled="disabled" type="text" id="V_rsin_rms"> </form> </div>
       <div class="sunit">V</div>
       <div class="scoment">RMS value of of Rectified Sine wave (with offset)</div>
     </div>
@@ -950,7 +952,7 @@ RU5ErkJggg==
     <!--  Row  -->
     <div class="row">
       <div class="sname">V_offset</div>
-      <div class="scalc"> <form> <input type="text" id="V_offset4"> </form> </div>
+      <div class="scalc"> <form> <input disabled="disabled" type="text" id="V_offset4"> </form> </div>
       <div class="sunit">V</div>
       <div class="scoment">Average value of Sawtooth wave (offset)</div>
     </div>
@@ -958,7 +960,7 @@ RU5ErkJggg==
     <!--  Row  -->
     <div class="row">
       <div class="sname">V_saw_ac_rms</div>
-      <div class="scalc"> <form> <input type="text" id="V_saw_ac_rms"> </form> </div>
+      <div class="scalc"> <form> <input disabled="disabled" type="text" id="V_saw_ac_rms"> </form> </div>
       <div class="sunit">V</div>
       <div class="scoment">RMS value of Sawtooth wave (without offset)</div>
     </div>
@@ -966,7 +968,7 @@ RU5ErkJggg==
     <!--  Row  -->
     <div class="row">
       <div class="sname">V_saw_rms</div>
-      <div class="scalc"> <form> <input type="text" id="V_saw_rms"> </form> </div>
+      <div class="scalc"> <form> <input disabled="disabled" type="text" id="V_saw_rms"> </form> </div>
       <div class="sunit">V</div>
       <div class="scoment">RMS value of Sawtooth wave (with offset)</div>
     </div>
@@ -977,7 +979,7 @@ RU5ErkJggg==
     <!--  Row  -->
     <div class="row">
       <div class="sname">V_offset</div>
-      <div class="scalc"> <form> <input type="text" id="V_offset5"> </form> </div>
+      <div class="scalc"> <form> <input disabled="disabled" type="text" id="V_offset5"> </form> </div>
       <div class="sunit">V</div>
       <div class="scoment">Average value of Square wave (offset)</div>
     </div>
@@ -985,7 +987,7 @@ RU5ErkJggg==
     <!--  Row  -->
     <div class="row">
       <div class="sname">V_sq_ac_rms</div>
-      <div class="scalc"> <form> <input type="text" id="V_sq_ac_rms"> </form> </div>
+      <div class="scalc"> <form> <input disabled="disabled" type="text" id="V_sq_ac_rms"> </form> </div>
       <div class="sunit">V</div>
       <div class="scoment">RMS value of Square wave (without offset)</div>
     </div>
@@ -993,7 +995,7 @@ RU5ErkJggg==
     <!--  Row  -->
     <div class="row">
       <div class="sname">V_sq_rms</div>
-      <div class="scalc"> <form> <input type="text" id="V_sq_rms"> </form> </div>
+      <div class="scalc"> <form> <input disabled="disabled" type="text" id="V_sq_rms"> </form> </div>
       <div class="sunit">V</div>
       <div class="scoment">RMS value of Square wave (with offset)</div>
     </div>
@@ -1044,7 +1046,7 @@ RU5ErkJggg==
     <!--  Row  -->
     <div class="row">
       <div class="sname">V_add_rms</div>
-      <div class="scalc"> <form> <input type="text" id="V_add_rms"> </form> </div>
+      <div class="scalc"> <form> <input disabled="disabled" type="text" id="V_add_rms"> </form> </div>
       <div class="sunit">V</div>
       <div class="scoment">RMS value of all waves</div>
     </div>
