--- a/inductance_calc.html
+++ b/inductance_calc.html
@@ -8,7 +8,7 @@
   <meta charset="UTF-8">
   <meta name="Keywords" content="Inductance, magnetics, coil, calculator">
   <meta name="Description" content="Javascript Inductance calculator">
-  <meta name="Version" content=" 14/03/2018 - SHA:4FF78A ">
+  <meta name="Version" content=" 14/03/2018 - SHA:D1D4E0 ">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />
 
   <!-- Styles -->
@@ -35,7 +35,7 @@
       padding-bottom: 2px;
     }
 
-    .license {
+    .footer {
       max-width: 640px;
       margin: 0 auto;
       text-align: center;
