--- a/rms_calculator.html
+++ b/rms_calculator.html
@@ -8,7 +8,7 @@
   <meta charset="UTF-8">
   <meta name="Keywords" content="RMS, average, median, value, calculator">
   <meta name="Description" content="JavaScript average and RMS value Calculator">
-  <meta name="Version" content=" 14/03/2018 - SHA:E87AC5 ">
+  <meta name="Version" content=" 14/03/2018 - SHA:8CE03A ">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />
 
   <!-- Styles -->
@@ -22,10 +22,6 @@
     /* Responsive design for Small screen */
     @media screen and (max-width: 640px) {
       body { min-width: 320px !important; }
-    }
-    /* Responsive design for Small screen */
-    @media screen and (max-width: 640px) {
-      body { min-width: 420px !important; }
     }
 
     .content {
