New templates compile

--- a/inductance_calc.html
+++ b/inductance_calc.html
@@ -8,7 +8,7 @@
   <meta charset="UTF-8">
   <meta name="Keywords" content="Inductance, magnetics, coil, calculator">
   <meta name="Description" content="Javascript Inductance calculator">
-  <meta name="Version" content=" 14/03/2018 - SHA:D1D4E0 ">
+  <meta name="Version" content=" 15/03/2018 - SHA:4831FD ">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />
 
   <!-- Styles -->
@@ -74,7 +74,7 @@
     /* Column 1: Variable name */
     .sname {
       display: inline-block;
-      min-width: 5em;
+      min-width: 6em;
     }
 
     /* Column 2: Variable Value (input form) */
@@ -114,7 +114,7 @@
     /* Column 3: Variable Units */
     .sunit {
       display: inline-block;
-      min-width: 5em;
+      min-width: 6em;
       text-align: center;
       border: 1px solid #888;
       border-radius: 4px;
