Correct license message

--- a/inductance_calc.html
+++ b/inductance_calc.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en-US">
 
 <head>
@@ -8,7 +8,7 @@
   <meta charset="UTF-8">
   <meta name="Keywords" content="Inductance, magnetics, coil, calculator">
   <meta name="Description" content="Javascript Inductance calculator">
-  <meta name="Version" content="15/03/2018 - SHA:B19EEB">
+  <meta name="Version" content="17/03/2018 - SHA:7164FD">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
   <title>Inductance Calculator</title>
 
@@ -547,8 +547,9 @@
     <!-- License -->
     This work by <a href="https://github.com/picuino/picalc">Picuino</a>
     is licensed under a
-    <a rel="MIT License" href="http://www.gnu.org/licenses/gpl-3.0.txt">
-    GPL version 3 license</a>.
+    <a rel="GPL License" 
+       href="http://www.gnu.org/licenses/gpl-3.0.txt">
+       GPL version 3 license</a>.
   </div>
 
 </body>
