--- a/rms_calculator.html
+++ b/rms_calculator.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en-US">
 
 <head>
@@ -8,7 +8,7 @@
   <meta charset="UTF-8">
   <meta name="Keywords" content="RMS, average, median, value, calculator">
   <meta name="Description" content="JavaScript average and RMS value Calculator">
-  <meta name="Version" content="15/03/2018 - SHA:8FA6D7">
+  <meta name="Version" content="17/03/2018 - SHA:8E7C78">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
   <title>Average and RMS value Calculator</title>
 
@@ -141,7 +141,7 @@
      
 
     <!-- Include script (48 lines): zeros.js -->
-    ﻿
+    
     <!-- Zero finding with secant method. https://en.wikipedia.org/wiki/Secant_method -->
     function zero_secant(x, fn) {
       var iter, x0, x1, x2, y0, y1;
@@ -1067,8 +1067,9 @@ RU5ErkJggg==
     <!-- License -->
     This work by <a href="https://github.com/picuino/picalc">Picuino</a>
     is licensed under a
-    <a rel="MIT License" href="http://www.gnu.org/licenses/gpl-3.0.txt">
-    GPL version 3 license</a>.
+    <a rel="GPL License" 
+       href="http://www.gnu.org/licenses/gpl-3.0.txt">
+       GPL version 3 license</a>.
   </div>
 
 </body>
